Add optional route_ids parameter

--- a/momo_workshop/create_network_from_OSM_workshop_workflow2.ipynb
+++ b/momo_workshop/create_network_from_OSM_workshop_workflow2.ipynb
@@ -23,6 +23,7 @@
    "outputs": [],
    "source": [
     "import IPython\n",
+    "from IPython.display import display\n",
     "IPython.core.display.display_html('<script>IPython.notebook.trusted = true;</script>', raw=True)\n",
     "\n",
     "import argparse\n",
@@ -379,17 +380,22 @@
    "source": [
     "\n",
     "# print(f\"transit_network.feed.shapes.columns: {transit_network.feed.shapes.columns}\")\n",
-    "shape_links_gdf = transit_network.feed.shapes.sort_values(by=[\"shape_id\",\"shape_pt_sequence\"])\n",
+    "shape_links_gdf = transit_network.feed.shapes.sort_values(by=[\"shape_id\",\"shape_pt_sequence\"]).reset_index(drop=True)\n",
     "shape_links_gdf[\"next_shape_model_node_id\"] = shape_links_gdf.groupby(\"shape_id\")[\"shape_model_node_id\"].shift(-1)\n",
+    "shape_links_gdf[\"next_shape_pt_sequence\"] = shape_links_gdf.groupby(\"shape_id\")[\"shape_pt_sequence\"].shift(-1)\n",
     "# Filter to only rows that have a next node (excludes last point of each shape)\n",
     "shape_links_gdf = shape_links_gdf.loc[ shape_links_gdf[\"next_shape_model_node_id\"].notna() ]\n",
+    "shape_links_gdf[\"next_shape_model_node_id\"] = shape_links_gdf[\"next_shape_model_node_id\"].astype(int)\n",
+    "shape_links_gdf[\"next_shape_pt_sequence\"] = shape_links_gdf[\"next_shape_pt_sequence\"].astype(int)\n",
     "shape_links_gdf.rename(columns={\"shape_model_node_id\":\"A\", \"next_shape_model_node_id\":\"B\"}, inplace=True)\n",
+    "# display(shape_links_gdf.loc[ shape_links_gdf.shape_id==\"SF:1400:20230930\", [\"route_type\",\"route_id\",\"shape_pt_sequence\",\"next_shape_pt_sequence\",\"A\",\"B\"]])\n",
+    "\n",
     "# drop these columns\n",
     "shape_links_gdf.drop(columns=[\"shape_id\",\"shape_pt_lat\",\"shape_pt_lon\",\"geometry\",\"stop_id\",\"stop_name\"], inplace=True)\n",
     "# print(f\"shape_links_gdf.columns: {shape_links_gdf.columns}\")\n",
     "\n",
     "# get road network shapes\n",
-    "roadnet_shapes_gdf = roadway_network.shapes_df\n",
+    "roadnet_shapes_gdf = roadway_network.links_df\n",
     "# print(f\"roadnet_shapes_gdf.columns:{roadnet_shapes_gdf.columns}\")\n",
     "\n",
     "# join to roadway_links.shape_df\n",
@@ -402,23 +408,9 @@
     "        indicator=True\n",
     "    ), crs=roadnet_shapes_gdf.crs\n",
     ")\n",
-    "print(f\"shape_roadnet_links_gdf.columns: {shape_roadnet_links_gdf.columns}\")\n",
-    "print(f\"shape_roadnet_links_gdf._merge.value_counts():\\n{shape_roadnet_links_gdf._merge.value_counts()}\")\n",
-    "print(f\"{type(shape_roadnet_links_gdf)=}\")\n",
+    "print(f\"Route ids: {shape_roadnet_links_gdf[\"route_id\"].unique()}\")\n",
     "\n",
-    "create_roadway_transit_map(roadway_network.links_df, shape_roadnet_links_gdf)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "899afe3b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(transit_network.feed.shapes[[\"route_type\",\"route_id\"]].value_counts())\n",
-    "print(shape_roadnet_links_gdf[[\"route_type\",\"route_id\"]].value_counts())\n",
-    "print(shape_roadnet_links_gdf.loc[shape_roadnet_links_gdf[\"route_id\"]==\"SF:14\"])"
+    "create_roadway_transit_map(roadway_network.links_df, shape_roadnet_links_gdf, route_ids=[\"SF:1\",\"SF:9\",\"SF:28R\"])"
    ]
   }
  ],
