Update to incorporate changes from the other script

--- a/momo_workshop/colab_Create_SF_network_from_OSM_GTFS.ipynb
+++ b/momo_workshop/colab_Create_SF_network_from_OSM_GTFS.ipynb
@@ -114,6 +114,7 @@
         "* `scikit-learn` for nearest neighbor searches to match transit to roadway network,\n",
         "* `pygris` to fetch county shapefiles,\n",
         "* `mapclassify` for visualization,\n",
+        "* `us` for state lookup codes\n",
         "* and local version of `network_wrangler`"
       ]
     },
@@ -126,7 +127,7 @@
       "outputs": [],
       "source": [
         "%%capture python_install_cap\n",
-        "!pip install scikit-learn pygris mapclassify\n",
+        "!pip install scikit-learn pygris mapclassify us\n",
         "# Install Tableau package if using Tableau for visualization\n",
         "#!pip install tableauhyperapi\n",
         "%cd /content/network_wrangler/\n",
@@ -188,6 +189,30 @@
         "!gdown 1wu-echoNNi5NzQh3BT4RwfnHYlUg8ZK5\n",
         "!unzip BayArea_511gtfs_2023-09.zip"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Fetch TIGER county files from Google Drive"
+      ],
+      "metadata": {
+        "id": "S_dPr8LEyXml"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "%cd /content\n",
+        "!mkdir tl_2010_us_county10\n",
+        "%cd /content/tl_2010_us_county10\n",
+        "!gdown 1vzmweK-QysWeVWBhNAC5R-pd4jfKlzV5\n",
+        "!unzip tl_2010_us_county10.zip"
+      ],
+      "metadata": {
+        "id": "PNGMtnGQyeFY"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -572,7 +597,7 @@
       },
       "outputs": [],
       "source": [
-        "transit_network = step6_create_transit_network(\n",
+        "transit_network, shape_links_gdf = step6_create_transit_network(\n",
         "    gtfs_model,\n",
         "    roadway_network,\n",
         "    county=\"San Francisco\",\n",
@@ -596,57 +621,16 @@
       "outputs": []
     },
     {
-      "cell_type": "markdown",
-      "source": [
-        "Let's look at the transit network links now. This is a little more complicated, because GTFS (and Wrangler-flavored GTFS) is point-based rather than link-based, but the point sequences now correspond to the roadway network links."
-      ],
-      "metadata": {
-        "id": "GQBLiLBI3uL-"
-      }
-    },
-    {
       "cell_type": "code",
       "source": [
-        "# Construct links from transit network shape points\n",
-        "shape_links_gdf = transit_network.feed.shapes.sort_values(by=[\"shape_id\",\"shape_pt_sequence\"]).reset_index(drop=True)\n",
-        "shape_links_gdf[\"next_shape_model_node_id\"] = shape_links_gdf.groupby(\"shape_id\")[\"shape_model_node_id\"].shift(-1)\n",
-        "shape_links_gdf[\"next_shape_pt_sequence\"] = shape_links_gdf.groupby(\"shape_id\")[\"shape_pt_sequence\"].shift(-1)\n",
-        "# Filter to only rows that have a next node (excludes last point of each shape)\n",
-        "shape_links_gdf = shape_links_gdf.loc[ shape_links_gdf[\"next_shape_model_node_id\"].notna() ]\n",
-        "shape_links_gdf[\"next_shape_model_node_id\"] = shape_links_gdf[\"next_shape_model_node_id\"].astype(int)\n",
-        "shape_links_gdf[\"next_shape_pt_sequence\"] = shape_links_gdf[\"next_shape_pt_sequence\"].astype(int)\n",
-        "shape_links_gdf.rename(columns={\"shape_model_node_id\":\"A\", \"next_shape_model_node_id\":\"B\"}, inplace=True)\n",
-        "\n",
-        "# Drop these columns\n",
-        "shape_links_gdf.drop(columns=[\"shape_id\",\"shape_pt_lat\",\"shape_pt_lon\",\"geometry\",\"stop_id\",\"stop_name\"], inplace=True)\n",
-        "\n",
-        "# Join them with roadway network shapes\n",
-        "roadnet_shapes_gdf = roadway_network.links_df\n",
-        "shape_roadnet_links_gdf = gpd.GeoDataFrame(\n",
-        "    pd.merge(\n",
-        "        left=shape_links_gdf,\n",
-        "        right=roadnet_shapes_gdf,\n",
-        "        on=[\"A\",\"B\"],\n",
-        "        how=\"left\",\n",
-        "        indicator=True\n",
-        "    ), crs=roadnet_shapes_gdf.crs\n",
-        ")"
-      ],
-      "metadata": {
-        "id": "oLZAsyUe376m"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# Now we're ready to view them. It's overwhelming to include all lines in the map, so choose some\n",
-        "print(f\"Route ids: {shape_roadnet_links_gdf[\"route_id\"].unique()}\")\n",
+        "# Now we're ready to view the transit shape links. It's overwhelming to include all lines in the map, so choose some\n",
+        "print(f\"Route ids: {shape_links_gdf[\"route_id\"].unique()}\")\n",
+        "print(f\"{type(shape_links_gdf)=}\")\n",
+        "print(f\"shape_links_gdf.dtypes=\\n{shape_links_gdf.dtypes}\")\n",
         "# Again, bbox_name arg can specify clipping area (one of 'SF_downtown''SF_financial_district''SF_mission')\n",
         "create_roadway_transit_map(\n",
         "    roadway_network.links_df,\n",
-        "    shape_roadnet_links_gdf,\n",
+        "    shape_links_gdf,\n",
         "    route_ids=[\"SF:30\",\"SF:45\"],\n",
         "    bbox_name=\"SF_downtown\"\n",
         ")"
@@ -704,8 +688,11 @@
     "colab": {
       "provenance": [],
       "collapsed_sections": [
-        "B3HDaoO7zUMP"
+        "hmyQtrtt8GvR",
+        "ecPXAk2kaI_k",
+        "ul2Qal9b_XiG"
       ],
+      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
