Update for recent work

--- a/momo_workshop/colab_Create_SF_network_from_OSM_GTFS.ipynb
+++ b/momo_workshop/colab_Create_SF_network_from_OSM_GTFS.ipynb
@@ -237,6 +237,7 @@
         "%cd /content/\n",
         "from network_wrangler import WranglerLogger\n",
         "import pathlib\n",
+        "BASE_OUTPUT_DIR = pathlib.Path(\"/content\")\n",
         "info_log_file = pathlib.Path(\"create_SF_network_info.log\")\n",
         "debug_log_file = pathlib.Path(\"create_SF_network_debug.log\")\n",
         "network_wrangler.setup_logging(\n",
@@ -284,6 +285,9 @@
       },
       "outputs": [],
       "source": [
+        "%cd /content/mtc_wrangler\n",
+        "import models\n",
+        "\n",
         "%cd /content/mtc_wrangler/create_baseyear_network\n",
         "from create_mtc_network_from_OSM import (\n",
         "  get_travel_model_zones,\n",
@@ -354,7 +358,7 @@
       "source": [
         "# Download the OSM network data for San Francisco county\n",
         "# This can take a couple of minutes\n",
-        "osm_g = step1_download_osm_network(\"San Francisco\", OUTPUT_DIR)\n",
+        "osm_g = step1_download_osm_network(\"San Francisco\", OUTPUT_DIR, \"/content\")\n",
         "print(type(osm_g))"
       ]
     },
@@ -389,7 +393,7 @@
       "outputs": [],
       "source": [
         "links_unsimplified_gdf, nodes_unsimplified_gdf = stepa_standardize_attributes(\n",
-        "    osm_g, \"San Francisco\", \"1a_original_\", OUTPUT_DIR, []\n",
+        "    osm_g, \"San Francisco\", \"1a_original_\", OUTPUT_DIR, BASE_OUTPUT_DIR, []\n",
         "  )"
       ]
     },
@@ -459,6 +463,7 @@
         "    simplified_g, \"San Francisco\",\n",
         "    prefix=\"2a_simplified\",\n",
         "    output_dir=OUTPUT_DIR,\n",
+        "    base_output_dir=BASE_OUTPUT_DIR,\n",
         "    output_formats=[\"geojson\"]\n",
         "  )\n"
       ]
@@ -508,6 +513,7 @@
         "    links_gdf, nodes_gdf,\n",
         "    county=\"San Francisco\",\n",
         "    output_dir=OUTPUT_DIR,\n",
+        "    base_output_dir=BASE_OUTPUT_DIR,\n",
         "    output_formats=[\"geojson\"]\n",
         ")"
       ]
@@ -534,6 +540,7 @@
         "    roadway_network,\n",
         "    county=\"San Francisco\",\n",
         "    output_dir=OUTPUT_DIR,\n",
+        "    base_output_dir=BASE_OUTPUT_DIR,\n",
         "    output_formats=[\"geojson\"]\n",
         ")"
       ]
@@ -575,7 +582,8 @@
         "gtfs_model = step5_prepare_gtfs_transit_data(\n",
         "    county=\"San Francisco\",\n",
         "    input_gtfs=pathlib.Path(\"/content/BayArea_511gtfs_2023-09\"),\n",
-        "    output_dir=OUTPUT_DIR\n",
+        "    output_dir=OUTPUT_DIR,\n",
+        "    base_output_dir=BASE_OUTPUT_DIR\n",
         ")"
       ]
     },
@@ -687,11 +695,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "collapsed_sections": [
-        "hmyQtrtt8GvR",
-        "ecPXAk2kaI_k",
-        "ul2Qal9b_XiG"
-      ],
       "toc_visible": true,
       "include_colab_link": true
     },
