Fixed remaining issues

--- a/momo_workshop/colab_Create_SF_network_from_OSM_GTFS.ipynb
+++ b/momo_workshop/colab_Create_SF_network_from_OSM_GTFS.ipynb
@@ -192,27 +192,27 @@
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "## Fetch TIGER county files from Google Drive"
-      ],
       "metadata": {
         "id": "S_dPr8LEyXml"
-      }
+      },
+      "source": [
+        "## Fetch TIGER county files from Google Drive"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "PNGMtnGQyeFY"
+      },
+      "outputs": [],
       "source": [
         "%cd /content\n",
         "!mkdir tl_2010_us_county10\n",
         "%cd /content/tl_2010_us_county10\n",
         "!gdown 1vzmweK-QysWeVWBhNAC5R-pd4jfKlzV5\n",
         "!unzip tl_2010_us_county10.zip"
-      ],
-      "metadata": {
-        "id": "PNGMtnGQyeFY"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -616,21 +616,32 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "OBNHhqk3bUms"
+      },
+      "outputs": [],
       "source": [
         "# Visualize roadway network with transit links\n",
         "# bbox_name arg can specify clipping area (one of 'SF_downtown''SF_financial_district''SF_mission')\n",
         "# If none passed, will show SF\n",
         "create_roadway_network_map(roadway_network.links_df, bbox_name=\"SF_downtown\")"
-      ],
-      "metadata": {
-        "id": "OBNHhqk3bUms"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "I3-BbHH-4LbH"
+      },
+      "outputs": [],
       "source": [
+        "# if debugging visualization code, need to re-import\n",
+        "# import importlib\n",
+        "# %cd /content/mtc_wrangler/momo_workshop\n",
+        "# importlib.reload(visualization)\n",
+        "# from visualization import create_roadway_transit_map\n",
+        "\n",
         "# Now we're ready to view the transit shape links. It's overwhelming to include all lines in the map, so choose some\n",
         "print(f\"Route ids: {shape_links_gdf[\"route_id\"].unique()}\")\n",
         "print(f\"{type(shape_links_gdf)=}\")\n",
@@ -642,12 +653,7 @@
         "    route_ids=[\"SF:30\",\"SF:45\"],\n",
         "    bbox_name=\"SF_downtown\"\n",
         ")"
-      ],
-      "metadata": {
-        "id": "I3-BbHH-4LbH"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -694,8 +700,8 @@
   ],
   "metadata": {
     "colab": {
-      "provenance": [],
       "toc_visible": true,
+      "provenance": [],
       "include_colab_link": true
     },
     "kernelspec": {
